--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -31,8 +31,18 @@
 	"block.mubble.acacia_leaves_carpet": "ʇǝdɹɐƆ sǝʌɐǝ˥ ɐᴉɔɐɔ∀",
 	"block.mubble.dark_oak_leaves_carpet": "ʇǝdɹɐƆ sǝʌɐǝ˥ ʞɐO ʞɹɐp",
 
+	"//block.mubble.permarock": "Permarock",
+	"//block.mubble.permafrost_bricks": "Permafrost Bricks",
+	"//block.mubble.permafrost_brick_stairs": "Permafrost Brick Stairs",
+	"//block.mubble.permafrost_brick_slab": "Permafrost Brick Slab",
+	"//block.mubble.permafrost_brick_vertical_slab": "Permafrost Brick Vertical Slab",
+	"//block.mubble.permafrost_brick_fence": "Permafrost Brick Fence",
+	"//block.mubble.blue_permafrost_bricks": "Blue Permafrost Bricks",
+	"//block.mubble.permafrost_bismuth_ore": "Permafrost Bismuth Ore",
+
 	"block.mubble.vanadium_block": "ɯnᴉpɐuɐᗺ ɟo ʞɔolᗺ",
 	"block.mubble.vanadium_ore": "ǝɹO ɯnᴉpɐuɐΛ",
+
 	"block.mubble.autumn_oak_sapling": "ƃuᴉldɐS ʞɐO uɯnʇn∀",
 	"block.mubble.autumn_oak_leaves": "sǝʌɐǝ˥ ʞɐO uɯnʇn∀",
 	"block.mubble.autumn_oak_leaves_carpet": "ʇǝdɹɐƆ sǝʌɐǝ˥ ʞɐO uɯnʇn∀",
@@ -486,6 +496,8 @@
 	"comment": "ITEMS",
 	"item.mubble.baguette": "ǝʇʇǝnƃɐq",
 	"item.mubble.vanadium": "ɯnᴉpɐuɐΛ",
+	"//item.mubble.bismuth_dust": "Bismuth Dust",
+	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
 	"item.mubble.bandage": "ǝƃɐpuɐq",
 	"item.mubble.wheat_flour": "ɹnolℲ ʇɐǝɥM",
 	"item.mubble.caramel_cube": "ǝqnƆ lǝɯɐɹɐƆ",
@@ -637,6 +649,8 @@
 	"biome.mubble.autumn_oak_forest": "ʇsǝɹoℲ ʞɐO uɯnʇn∀",
 	"biome.mubble.pink_cherry_oak_forest": "ʇsǝɹoℲ ʞɐO ʎɹɹǝɥƆ ʞuᴉԀ",
 	"biome.mubble.white_cherry_oak_forest": "ʇsǝɹoℲ ʞɐO ʎɹɹǝɥƆ ǝʇᴉɥM",
+	"//biome.mubble.permafrost": "Permafrost",
+
 	"biome.mubble.scarlet_forest": "ʇsǝɹoℲ ʇǝlɹɐɔS",
 
 
