--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -31,8 +31,18 @@
 	"block.mubble.acacia_leaves_carpet": "Tapis de feuilles de acacia",
 	"block.mubble.dark_oak_leaves_carpet": "Tapis de feuilles de chêne noir",
 	
+	"//block.mubble.permarock": "Permarock",
+	"//block.mubble.permafrost_bricks": "Permafrost Bricks",
+	"//block.mubble.permafrost_brick_stairs": "Permafrost Brick Stairs",
+	"//block.mubble.permafrost_brick_slab": "Permafrost Brick Slab",
+	"//block.mubble.permafrost_brick_vertical_slab": "Permafrost Brick Vertical Slab",
+	"//block.mubble.permafrost_brick_fence": "Permafrost Brick Fence",
+	"//block.mubble.blue_permafrost_bricks": "Blue Permafrost Bricks",
+	"//block.mubble.permafrost_bismuth_ore": "Permafrost Bismuth Ore",
+
 	"block.mubble.vanadium_block": "Bloc de vanadium",
 	"block.mubble.vanadium_ore": "Minerai de vanadium",
+	
 	"block.mubble.autumn_oak_sapling": "Pousse de chêne d'automne",
 	"block.mubble.autumn_oak_leaves": "Feuilles de chêne d'automne",
 	"block.mubble.autumn_oak_leaves_carpet": "Tapis de feuilles de chêne d'automne",
@@ -486,6 +496,8 @@
 	"comment": "ITEMS",
 	"item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
+	"//item.mubble.bismuth_dust": "Bismuth Dust",
+	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
 	"item.mubble.bandage": "Bandage",
 	"item.mubble.wheat_flour": "Farine de blé",
 	"item.mubble.caramel_cube": "Cube de caramel",
@@ -637,6 +649,8 @@
 	"biome.mubble.autumn_oak_forest": "Forêt de chênes d'automne",
 	"biome.mubble.pink_cherry_oak_forest": "Forêt de cerisiers roses",
 	"biome.mubble.white_cherry_oak_forest": "Forêt de cerisiers blancs",
+	"//biome.mubble.permafrost": "Permafrost",
+
 	"biome.mubble.scarlet_forest": "Forêt écarlate",
 
 
