--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -497,7 +497,7 @@
 	"item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bismuth_dust": "Bismuth Dust",
-	"item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"item.mubble.crystallized_bismuth": "Crystallized Bismuth",
 	"item.mubble.bandage": "Bandage",
 	"item.mubble.wheat_flour": "Wheat Flour",
 	"item.mubble.caramel_cube": "Caramel Cube",
