--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -496,7 +496,7 @@
 	"item.mubble.baguette": "Stangenweißbrot",
 	"item.mubble.vanadium": "Vanadium",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Weizenmehl",
 	"item.mubble.caramel_cube": "Karamellwürfel",
