--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -497,7 +497,7 @@
 	"item.mubble.baguette": "ǝʇʇǝnƃɐq",
 	"item.mubble.vanadium": "ɯnᴉpɐuɐΛ",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
 	"item.mubble.bandage": "ǝƃɐpuɐq",
 	"item.mubble.wheat_flour": "ɹnolℲ ʇɐǝɥM",
 	"item.mubble.caramel_cube": "ǝqnƆ lǝɯɐɹɐƆ",
