--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -497,7 +497,7 @@
 	"item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
 	"item.mubble.bandage": "Bandage",
 	"item.mubble.wheat_flour": "Farine de blé",
 	"item.mubble.caramel_cube": "Cube de caramel",
