--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -497,7 +497,7 @@
 	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "shiny purple",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
 	"item.mubble.bandage": "banaj",
 	"item.mubble.wheat_flour": "wet floor",
 	"item.mubble.caramel_cube": "tiny caraml boii",
