--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -31,14 +31,14 @@
 	"block.mubble.acacia_leaves_carpet": "Acaciabladeren tapijt",
 	"block.mubble.dark_oak_leaves_carpet": "Donkereikenbladeren tapijt",
 	
-	"//block.mubble.permarock": "Permarock",
-	"//block.mubble.permafrost_bricks": "Permafrost Bricks",
-	"//block.mubble.permafrost_brick_stairs": "Permafrost Brick Stairs",
-	"//block.mubble.permafrost_brick_slab": "Permafrost Brick Slab",
-	"//block.mubble.permafrost_brick_vertical_slab": "Permafrost Brick Vertical Slab",
-	"//block.mubble.permafrost_brick_fence": "Permafrost Brick Fence",
-	"//block.mubble.blue_permafrost_bricks": "Blue Permafrost Bricks",
-	"//block.mubble.permafrost_bismuth_ore": "Permafrost Bismuth Ore",
+	"block.mubble.permarock": "Permasteen",
+	"block.mubble.permafrost_bricks": "Permafrost bakstenen",
+	"block.mubble.permafrost_brick_stairs": "Permafrost bakstenentrap",
+	"block.mubble.permafrost_brick_slab": "Permafrost bakstenenplaat",
+	"block.mubble.permafrost_brick_vertical_slab": "Permafrost bakstenen verticale plaat",
+	"block.mubble.permafrost_brick_fence": "Permafrost bakstenen hek",
+	"block.mubble.blue_permafrost_bricks": "Blauwe permafrost bakstenen",
+	"block.mubble.permafrost_bismuth_ore": "Permafrost bismutherts",
 
 	"block.mubble.vanadium_block": "Vanadiumblok",
 	"block.mubble.vanadium_ore": "Vanadiumerts",
@@ -497,8 +497,8 @@
 	"comment": "ITEMS",
 	"item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadium",
-	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"item.mubble.bismuth_dust": "Bismuthstof",
+	"item.mubble.crystallized_bismuth": "gekristalliseerde bismuth",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Tarwemeel",
 	"item.mubble.caramel_cube": "Karamel kubus",
@@ -650,7 +650,7 @@
 	"biome.mubble.autumn_oak_forest": "Herfsteiken bos",
 	"biome.mubble.pink_cherry_oak_forest": "Rozekerseneiken bos",
 	"biome.mubble.white_cherry_oak_forest": "Wittekerseneiken bos",
-	"//biome.mubble.permafrost": "Permafrost",
+	"biome.mubble.permafrost": "Permafrost",
 
 	"biome.mubble.scarlet_forest": "Scharlake bos",
 
