--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -497,7 +497,7 @@
 	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "钒",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
 	"item.mubble.bandage": "绷带",
 	"item.mubble.wheat_flour": "小麦面粉",
 	"item.mubble.caramel_cube": "焦糖块",
