--- a/src/main/resources/assets/mubble/lang/zh_tw.json
+++ b/src/main/resources/assets/mubble/lang/zh_tw.json
@@ -497,7 +497,7 @@
 	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "釩",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
 	"item.mubble.bandage": "繃帶",
 	"item.mubble.wheat_flour": "小麥麵粉",
 	"item.mubble.caramel_cube": "焦糖塊",
