--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -497,7 +497,7 @@
 	"//item.mubble.baguette": "Baguette",
 	"item.mubble.vanadium": "Vanadio",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Cystallized Bismuth",
+	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
 	"item.mubble.bandage": "Vendaje",
 	"item.mubble.wheat_flour": "Harina de trigo",
 	"item.mubble.caramel_cube": "Cubo de caramelo",
