--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -31,14 +31,14 @@
 	"block.mubble.acacia_leaves_carpet": "Akazienlaubteppich",
 	"block.mubble.dark_oak_leaves_carpet": "Schwarzeichenlaubteppich",
 
-	"//block.mubble.permarock": "Permarock",
-	"//block.mubble.permafrost_bricks": "Permafrost Bricks",
-	"//block.mubble.permafrost_brick_stairs": "Permafrost Brick Stairs",
-	"//block.mubble.permafrost_brick_slab": "Permafrost Brick Slab",
-	"//block.mubble.permafrost_brick_vertical_slab": "Permafrost Brick Vertical Slab",
-	"//block.mubble.permafrost_brick_fence": "Permafrost Brick Fence",
-	"//block.mubble.blue_permafrost_bricks": "Blue Permafrost Bricks",
-	"//block.mubble.permafrost_bismuth_ore": "Permafrost Bismuth Ore",
+	"block.mubble.permarock": "Permastein",
+	"block.mubble.permafrost_bricks": "Permafrostziegelsteine",
+	"block.mubble.permafrost_brick_stairs": "Permafrostziegeltreppe",
+	"block.mubble.permafrost_brick_slab": "Permafrostziegelstufe",
+	"block.mubble.permafrost_brick_vertical_slab": "Senkrechte Permafrostziegelstufe",
+	"block.mubble.permafrost_brick_fence": "Permafrostziegelzaun",
+	"block.mubble.blue_permafrost_bricks": "Blauer Permafrostziegelstein",
+	"block.mubble.permafrost_bismuth_ore": "Permafrost-Bismuterz",
 	
 	"block.mubble.vanadium_block": "Vanadiumblock",
 	"block.mubble.vanadium_ore": "Vanadiumerz",
@@ -495,8 +495,8 @@
 	"comment": "ITEMS",
 	"item.mubble.baguette": "Stangenweißbrot",
 	"item.mubble.vanadium": "Vanadium",
-	"//item.mubble.bismuth_dust": "Bismuth Dust",
-	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
+	"item.mubble.bismuth_dust": "Bismutstaub",
+	"item.mubble.crystallized_bismuth": "Kristallisiertes Bismut",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Weizenmehl",
 	"item.mubble.caramel_cube": "Karamellwürfel",
@@ -648,7 +648,7 @@
 	"biome.mubble.autumn_oak_forest": "Herbsteichenwald",
 	"biome.mubble.pink_cherry_oak_forest": "Rosa Kirscheichenwald",
 	"biome.mubble.white_cherry_oak_forest": "Weißer Kirscheichenwald",
-	"//biome.mubble.permafrost": "Permafrost",
+	"biome.mubble.permafrost": "Permafrostboden",
 
 	"biome.mubble.scarlet_forest": "Scharlachwald",
 
