--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -39,6 +39,7 @@
 	"block.mubble.permafrost_brick_fence": "Permafrostziegelzaun",
 	"block.mubble.blue_permafrost_bricks": "Blauer Permafrostziegelstein",
 	"block.mubble.permafrost_bismuth_ore": "Permafrost-Bismuterz",
+	"//block.mubble.frozen_obsidian": "Frozen Obsidian",
 	
 	"block.mubble.vanadium_block": "Vanadiumblock",
 	"block.mubble.vanadium_ore": "Vanadiumerz",
@@ -702,6 +703,7 @@
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bismuth_dust": "Bismutstaub",
 	"item.mubble.crystallized_bismuth": "Kristallisiertes Bismut",
+	"//item.mubble.permafrost_brick": "Permafrost Brick",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Weizenmehl",
 	"item.mubble.caramel_cube": "Karamellwürfel",
@@ -790,8 +792,9 @@
 	"item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi-Flipper (Notenblock-Neuabmischung)",
 
 
-	"item.mubble.toad_spawn_egg": "Toad-Spawn-Ei",
 	"item.mubble.chincho_spawn_egg": "Chincho-Spawn-Ei",
+	"item.mubble.toad_spawn_egg": "Toad-Spawn-Ei",
+	"//item.mubble.zombie_cowman_spawn_egg": "Zombie Cowman Spawn Egg",
 
 
 
@@ -843,9 +846,10 @@
 
 
 	"comment": "ENTITIES",
-	"entity.mubble.toad": "Toad",
 	"entity.mubble.chincho": "Chincho",
 	"entity.mubble.flying_block": "Fliegender Block",
+	"entity.mubble.toad": "Toad",
+	"//entity.mubble.zombie_cowman": "Zombie Cowman",
 
 
 
@@ -873,9 +877,16 @@
 	"subtitles.costume.cappy.equip": "Cappy steigt auf jemands Kopf",
 	"subtitles.costume.cappy.happy": "Cappy murmelt fröhlich",
 	"subtitles.costume.cappy.help": "Cappy bittet um Hilfe",
+	"//subtitles.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.entity.chincho.death": "Chincho dies",
 	"subtitles.entity.toad.ambient": "Toad murmelt",
 	"subtitles.entity.toad.hurt": "Toad verletzt",
 	"subtitles.entity.toad.death": "Toad stirbt",
+	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
