--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -39,6 +39,7 @@
 	"//block.mubble.permafrost_brick_fence": "Permafrost Brick Fence",
 	"//block.mubble.blue_permafrost_bricks": "Blue Permafrost Bricks",
 	"//block.mubble.permafrost_bismuth_ore": "Permafrost Bismuth Ore",
+	"//block.mubble.frozen_obsidian": "Frozen Obsidian",
 
 	"block.mubble.vanadium_block": "ɯnᴉpɐuɐᗺ ɟo ʞɔolᗺ",
 	"block.mubble.vanadium_ore": "ǝɹO ɯnᴉpɐuɐΛ",
@@ -702,6 +703,7 @@
 	"item.mubble.vanadium": "ɯnᴉpɐuɐΛ",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
 	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
+	"//item.mubble.permafrost_brick": "Permafrost Brick",
 	"item.mubble.bandage": "ǝƃɐpuɐq",
 	"item.mubble.wheat_flour": "ɹnolℲ ʇɐǝɥM",
 	"item.mubble.caramel_cube": "ǝqnƆ lǝɯɐɹɐƆ",
@@ -790,8 +792,9 @@
 	"item.mubble.remix_disc_nb_waluigi_pinball.desc": "(xᴉɯǝɹ ʞɔolᗺǝʇoN) llɐquᴉԀ ᴉƃᴉnlɐM - Sp ʇɹɐʞ oᴉɹɐW",
 
 
-	"item.mubble.toad_spawn_egg": "ƃƃƎ uʍɐdS pɐo┴",
 	"item.mubble.chincho_spawn_egg": "ƃƃƎ uʍɐdS oɥɔuᴉɥƆ",
+	"item.mubble.toad_spawn_egg": "ƃƃƎ uʍɐdS pɐo┴",
+	"//item.mubble.zombie_cowman_spawn_egg": "Zombie Cowman Spawn Egg",
 
 
 
@@ -843,9 +846,10 @@
 
 
 	"comment": "ENTITIES",
-	"entity.mubble.toad": "pɐo┴",
 	"entity.mubble.chincho": "oɥɔuᴉɥƆ",
 	"entity.mubble.flying_block": "ʞɔolᗺ ƃuᴉʎlℲ",
+	"entity.mubble.toad": "pɐo┴",
+	"//entity.mubble.zombie_cowman": "Zombie Cowman",
 
 
 
@@ -873,9 +877,16 @@
 	"subtitles.costume.cappy.equip": "pǝdᴉnbǝ ʎddɐƆ",
 	"subtitles.costume.cappy.happy": "sǝlqɯnɯ ʎlƃuᴉoɾuǝ ʎddɐƆ",
 	"subtitles.costume.cappy.help": "dlǝɥ ɹoɟ sʞsɐ ʎddɐƆ",
+	"//subtitles.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.entity.chincho.death": "Chincho dies",
 	"subtitles.entity.toad.ambient": "sǝlqɯnɯ pɐo┴",
 	"subtitles.entity.toad.hurt": "sʇɹnɥ pɐo┴",
 	"subtitles.entity.toad.death": "sǝᴉp pɐo┴",
+	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
