--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -39,6 +39,7 @@
 	"//block.mubble.permafrost_brick_fence": "Permafrost Brick Fence",
 	"//block.mubble.blue_permafrost_bricks": "Blue Permafrost Bricks",
 	"//block.mubble.permafrost_bismuth_ore": "Permafrost Bismuth Ore",
+	"//block.mubble.frozen_obsidian": "Frozen Obsidian",
 
 	"block.mubble.vanadium_block": "Bloque de vanadio",
 	"block.mubble.vanadium_ore": "Mena de vanadio",
@@ -702,6 +703,7 @@
 	"item.mubble.vanadium": "Vanadio",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
 	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
+	"//item.mubble.permafrost_brick": "Permafrost Brick",
 	"item.mubble.bandage": "Vendaje",
 	"item.mubble.wheat_flour": "Harina de trigo",
 	"item.mubble.caramel_cube": "Cubo de caramelo",
@@ -790,8 +792,9 @@
 	"item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
 
-	"item.mubble.toad_spawn_egg": "Generar toad",
 	"item.mubble.chincho_spawn_egg": "Generar chincho",
+	"item.mubble.toad_spawn_egg": "Generar toad",
+	"//item.mubble.zombie_cowman_spawn_egg": "Zombie Cowman Spawn Egg",
 
 
 
@@ -843,9 +846,10 @@
 
 
 	"comment": "ENTITIES",
-	"entity.mubble.toad": "Toad",
 	"entity.mubble.chincho": "Chincho",
 	"//entity.mubble.flying_block": "Flying Block",
+	"entity.mubble.toad": "Toad",
+	"//entity.mubble.zombie_cowman": "Zombie Cowman",
 
 
 
@@ -873,9 +877,16 @@
 	"//subtitles.costume.cappy.equip": "<newline>",
 	"//subtitles.costume.cappy.happy": "<newline>",
 	"//subtitles.costume.cappy.help": "<newline>",
+	"//subtitles.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.entity.chincho.death": "Chincho dies",
 	"subtitles.entity.toad.ambient": "Toad balbucea",
 	"subtitles.entity.toad.hurt": "Toad herido",
 	"subtitles.entity.toad.death": "Toad muere",
+	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
