--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -39,6 +39,7 @@
 	"block.mubble.permafrost_brick_fence": "Permafrost bakstenen hek",
 	"block.mubble.blue_permafrost_bricks": "Blauwe permafrost bakstenen",
 	"block.mubble.permafrost_bismuth_ore": "Permafrost bismutherts",
+	"//block.mubble.frozen_obsidian": "Frozen Obsidian",
 
 	"block.mubble.vanadium_block": "Vanadiumblok",
 	"block.mubble.vanadium_ore": "Vanadiumerts",
@@ -702,6 +703,7 @@
 	"item.mubble.vanadium": "Vanadium",
 	"item.mubble.bismuth_dust": "Bismuthstof",
 	"item.mubble.crystallized_bismuth": "gekristalliseerde bismuth",
+	"//item.mubble.permafrost_brick": "Permafrost Brick",
 	"item.mubble.bandage": "Verband",
 	"item.mubble.wheat_flour": "Tarwemeel",
 	"item.mubble.caramel_cube": "Karamel kubus",
@@ -790,8 +792,9 @@
 	"item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
 
-	"item.mubble.toad_spawn_egg": "Toadspawnei",
 	"item.mubble.chincho_spawn_egg": "Chinchospawnei",
+	"item.mubble.toad_spawn_egg": "Toadspawnei",
+	"//item.mubble.zombie_cowman_spawn_egg": "Zombie Cowman Spawn Egg",
 
 
 
@@ -843,9 +846,10 @@
 
 
 	"comment": "ENTITIES",
-	"entity.mubble.toad": "Toad",
 	"entity.mubble.chincho": "Chincho",
 	"entity.mubble.flying_block": "Vliegend blok",
+	"entity.mubble.toad": "Toad",
+	"//entity.mubble.zombie_cowman": "Zombie Cowman",
 
 
 
@@ -873,9 +877,16 @@
 	"subtitles.costume.cappy.equip": "Cappy kwam op iemand's hoofd",
 	"subtitles.costume.cappy.happy": "Cappy mompelt blij",
 	"subtitles.costume.cappy.help": "Cappy vraagt om hulp",
+	"//subtitles.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.entity.chincho.death": "Chincho dies",
 	"subtitles.entity.toad.ambient": "Toad mompelt",
 	"subtitles.entity.toad.hurt": "Toad heeft pijn",
 	"subtitles.entity.toad.death": "Toad sterft",
+	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
