--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -39,6 +39,7 @@
 	"//block.mubble.permafrost_brick_fence": "Permafrost Brick Fence",
 	"//block.mubble.blue_permafrost_bricks": "Blue Permafrost Bricks",
 	"//block.mubble.permafrost_bismuth_ore": "Permafrost Bismuth Ore",
+	"//block.mubble.frozen_obsidian": "Frozen Obsidian",
 
 	"block.mubble.vanadium_block": "Bloco de Vanadium",
 	"block.mubble.vanadium_ore": "Minério de Vanadium",
@@ -702,6 +703,7 @@
 	"item.mubble.vanadium": "Vanadium",
 	"//item.mubble.bismuth_dust": "Bismuth Dust",
 	"//item.mubble.crystallized_bismuth": "Crystallized Bismuth",
+	"//item.mubble.permafrost_brick": "Permafrost Brick",
 	"item.mubble.bandage": "Bandagem",
 	"item.mubble.wheat_flour": "Farinha de Trigo",
 	"item.mubble.caramel_cube": "Cubo de Caramelo",
@@ -790,8 +792,9 @@
 	"item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
 
-	"item.mubble.toad_spawn_egg": "Ovo de Gerar Toad",
 	"item.mubble.chincho_spawn_egg": "Ovo de Gerar Chincho",
+	"item.mubble.toad_spawn_egg": "Ovo de Gerar Toad",
+	"//item.mubble.zombie_cowman_spawn_egg": "Zombie Cowman Spawn Egg",
 
 
 
@@ -843,9 +846,10 @@
 
 
 	"comment": "ENTITIES",
-	"entity.mubble.toad": "Toad",
 	"entity.mubble.chincho": "Chincho",
 	"entity.mubble.flying_block": "Bloco Voador",
+	"entity.mubble.toad": "Toad",
+	"//entity.mubble.zombie_cowman": "Zombie Cowman",
 
 
 
@@ -873,9 +877,16 @@
 	"subtitles.costume.cappy.equip": "Cappy chegou na cabeça de alguém",
 	"subtitles.costume.cappy.happy": "Cappy murmura apreciavelmente",
 	"subtitles.costume.cappy.help": "Cappy pede por ajuda",
+	"//subtitles.entity.chincho.ambient": "Chincho talks",
+	"//subtitles.entity.chincho.hurt": "Chincho hurts",
+	"//subtitles.entity.chincho.death": "Chincho dies",
 	"subtitles.entity.toad.ambient": "Toad murmura",
 	"subtitles.entity.toad.hurt": "Toad senti dor",
 	"subtitles.entity.toad.death": "Toad morre",
+	"//subtitles.entity.zombie_cowman.ambient": "Zombie Cowman grunts",
+	"//subtitles.entity.zombie_cowman.hurt": "Zombie Cowman hurts",
+	"//subtitles.entity.zombie_cowman.angry": "Zombie Cowman angers",
+	"//subtitles.entity.zombie_cowman.death": "Zombie Cowman dies",
 
 
 
